# STOTools

./: .envrc  .gitignore  0_51  0_51_nowrap  CMakeLists.txt  POSCAR_compact  POSCAR_single_test  POSCAR_supercell_a3p905  README.md  avg.py  check_centering  check_uc_coords  op.out  pol.out  pol_plot.gp  test.out  test_lammps.out  uc_centered.py
POL/: pol1.out  pol10.out  pol100.out  pol101.out  pol102.out  pol103.out  pol104.out  pol105.out  pol106.out  pol107.out  pol108.out  pol109.out  pol11.out  pol110.out  pol111.out  pol112.out  pol113.out  pol114.out  pol115.out  pol116.out  pol117.out  pol118.out  pol12.out  pol13.out  pol14.out  pol15.out  pol16.out  pol17.out  pol18.out  pol19.out  pol2.out  pol20.out  pol21.out  pol22.out  pol23.out  pol24.out  pol25.out  pol26.out  pol27.out  pol28.out  (+78 more)
example/: POSCAR3  POSCAR4  XDATCAR
example/OP/: op1000.out  op1100.out  op1150.out  op1200.out  op1250.out  op1300.out  op1350.out  op1450.out  op1500.out  op1550.out  op1600.out  op1650.out  op1750.out  op1850.out  op1900.out  op2050.out  op2100.out  op2150.out  op2200.out  op2250.out  op2350.out  op2400.out  op2450.out  op250.out  op2500.out  op2550.out  op2600.out  op2650.out  op2700.out  op2750.out  op2800.out  op2850.out  op2950.out  op300.out  op3000.out  op3050.out  op3100.out  op3150.out  op3200.out  op3250.out  (+96 more)
example/POL/: pol1000.out  pol1050.out  pol1100.out  pol1150.out  pol1200.out  pol1250.out  pol1300.out  pol1350.out  pol1400.out  pol1450.out  pol1500.out  pol1550.out  pol1600.out  pol1650.out  pol1700.out  pol1750.out  pol1850.out  pol1900.out  pol1950.out  pol200.out  pol2100.out  pol2200.out  pol2300.out  pol2350.out  pol2400.out  pol250.out  pol2500.out  pol2550.out  pol2600.out  pol2650.out  pol2700.out  pol2750.out  pol2800.out  pol2850.out  pol2900.out  pol300.out  pol3050.out  pol3100.out  pol3150.out  pol3200.out  (+109 more)
example/poscars/: POSCAR.1000  POSCAR.1050  POSCAR.1100  POSCAR.1300  POSCAR.1400  POSCAR.1450  POSCAR.1500  POSCAR.1550  POSCAR.1600  POSCAR.1650  POSCAR.1700  POSCAR.1750  POSCAR.1850  POSCAR.1950  POSCAR.2200  POSCAR.2300  POSCAR.2350  POSCAR.2500  POSCAR.2600  POSCAR.2650  POSCAR.2700  POSCAR.2800  POSCAR.2950  POSCAR.300  POSCAR.3050  POSCAR.3100  POSCAR.3200  POSCAR.3300  POSCAR.3350  POSCAR.3450  POSCAR.350  POSCAR.3650  POSCAR.3700  POSCAR.3800  POSCAR.3950  POSCAR.4050  POSCAR.4100  POSCAR.4150  POSCAR.4250  POSCAR.4350  (+53 more)
example/poscarsT20_p40/: POSCAR.0  POSCAR.1  POSCAR.10  POSCAR.100  POSCAR.1001  POSCAR.1002  POSCAR.1003  POSCAR.1004  POSCAR.1005  POSCAR.1006  POSCAR.1007  POSCAR.1008  POSCAR.1009  POSCAR.101  POSCAR.1010  POSCAR.1011  POSCAR.1012  POSCAR.1013  POSCAR.1014  POSCAR.1015  POSCAR.1016  POSCAR.1017  POSCAR.1018  POSCAR.1019  (+9100 more)
src/: CMakeLists.txt
src/PolCalc/: CMakeLists.txt  POSCAR_sto_bulk2  ht_test.cpp  main.cpp  nn_test.cpp  single_test.cpp  test.cpp  test_avg.cpp  test_poscar.cpp  test_xdatcar.cpp  tests.cpp  tests.cpp~  tests1.cpp  tests2.cpp
src/PolCalc/include/: polcalc.hpp
src/PolFinder/: CMakeLists.txt  POSCAR_sto_bulk  main.cpp  test  test.py  test.txt  tests.cpp
src/PolFinder/include/: polfinder.hpp
src/PolFinder/include/FileReader/: file_reader.hpp
test/: BORN-CHARGES-P20  BORN-CHARGES-P40  POSCAR  POSCAR-P0  POSCAR-P40  POSCAR-P60  POSCAR2  POSCAR5  POSCAR6  POSCAR7  POSCAR_lammps  op.out  perf.data  perf.out  polcalc.out  test.out
(+83988 files in other folders)
